<resources>
    <string name="app_name">Baby Photo</string>
    <string name="add_baby">Update Baby</string>
    <string name="join_album">Join Album</string>
    <string name="about_baby">About Baby</string>
    <string name="create">Create</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="relation">Relation</string>
    <string name="name">name</string>
    <string name="album">Album</string>
    <string name="back">You really want to go back?</string>
    <string name="cancel">Cancel</string>
    <string name="Ok">Ok</string>
    <string name="add_moment">Add Moment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>