<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:background="@color/Transparent"
    tools:context=".screen.createalbum.CreateAlbumActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCreateAlbumBackHome"
        android:layout_height="35dp"
        android:layout_width="35dp"
        android:padding="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_back_home"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCreateAlbumTitle"
        style="@style/BpStyleText20Medium"
        android:text="@string/about_baby"
        app:layout_constraintBottom_toBottomOf="@+id/ivCreateAlbumBackHome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivCreateAlbumBackHome" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateAlbumCreate"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape_gray_bg_corner_20"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/tvCreateAlbumTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvCreateAlbumTitle" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivCreateAlbumAvatar"
        android:layout_height="130dp"
        android:layout_width="130dp"
        android:layout_marginTop="40dp"
        android:scaleType="centerCrop"
        android:background="@drawable/ic_bt_avatar_24px"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCreateAlbumTitle" />

    <FrameLayout
        android:id="@+id/flCreateAlbumCamera"
        style="@style/BabyPhotoStyleText"
        android:background="@drawable/ic_vector7_24px"
        app:layout_constraintBottom_toBottomOf="@id/ivCreateAlbumAvatar"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintLeft_toLeftOf="@id/ivCreateAlbumAvatar"
        app:layout_constraintRight_toRightOf="@id/ivCreateAlbumAvatar"
        app:layout_constraintTop_toTopOf="@id/ivCreateAlbumAvatar"
        app:layout_constraintVertical_bias="1.0">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_height="25dp"
            android:layout_width="25dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_camera2_24px"
            tools:layout_editor_absoluteX="239dp"
            tools:layout_editor_absoluteY="185dp" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtCreateAlbumName"
        style="@style/BpStyleText20Medium"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        android:maxLength="20"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivCreateAlbumAvatar" />

    <TextView
        style="@style/BpStyleText15MediumNoColor"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/gender"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtCreateAlbumName" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCreateAlbumBoy"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/shape_cir_yellow_bg_corner_large"
        android:src="@drawable/ic_boy1_24px"
        app:layout_constraintBottom_toBottomOf="@+id/ivCreateAlbumGirl"
        app:layout_constraintEnd_toStartOf="@+id/ivCreateAlbumGirl"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivCreateAlbumGirl"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCreateAlbumGirl"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/shape_cir_grey_bg_corner_90"
        android:src="@drawable/ic_girl1_24px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivCreateAlbumBoy"
        app:layout_constraintTop_toBottomOf="@+id/edtCreateAlbumName" />

    <TextView
        style="@style/BpStyleText15MediumNoColor"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/birthday"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivCreateAlbumBoy" />

    <FrameLayout
        android:id="@+id/flCreateAlbumBirthday"
        style="@style/BabyPhotoStyleText"
        android:layout_marginTop="35dp"
        android:background="@drawable/ic_rectangle_24px"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivCreateAlbumBoy">

        <TextView
            android:id="@+id/tvCreateAlbumBirthday"
            style="@style/BabyPhotoStyleText"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:padding="5dp"
            android:textColor="#1E1E1E"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_height="16dp"
            android:layout_width="16dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_calendarbd" />
    </FrameLayout>

    <TextView
        style="@style/BpStyleText15MediumNoColor"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/relation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flCreateAlbumBirthday" />


    <FrameLayout
        android:id="@+id/flCreateAlbumRelation"
        style="@style/BabyPhotoStyleText"
        android:layout_marginTop="45dp"
        android:background="@drawable/ic_rectangle_24px"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flCreateAlbumBirthday">

        <TextView
            android:id="@+id/tvCreateAlbumRelation"
            style="@style/BabyPhotoStyleText"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:padding="5dp"
            android:textColor="#1E1E1E"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_height="14dp"
            android:layout_width="14dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_relation" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>